--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,10 +6,13 @@ psycopg2-binary==2.9.9
 python-dotenv==1.0.1
 PyJWT==2.8.0
 Werkzeug==3.0.1
-langchain==0.1.12
-langchain-community==0.0.27
-langchain-experimental==0.0.49
-faiss-cpu==1.7.4
-sentence-transformers==2.5.1
-pdfplumber==0.10.3
-google-auth==2.28.1 
+langchain==0.3.7
+langchain-community==0.3.7
+langchain-experimental==0.3.3
+langchain-core==0.3.15
+faiss-cpu==1.8.0
+sentence-transformers==3.0.1
+pdfplumber==0.11.4
+google-auth==2.28.1
+typing-extensions>=4.8.0
+pydantic>=2.0.0,<3.0.0 
